--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   yaru: ^0.2.5
   yaru_widgets: ^1.0.7
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
